// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should match snapshot 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#1c58d9",
        },
        Object {},
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flex": 0,
            "justifyContent": "center",
          },
          Object {
            "height": 40,
            "paddingHorizontal": 20,
            "paddingVertical": 12,
          },
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "OpenSans",
            "fontWeight": "600",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 14,
          },
          Object {
            "color": "#ffffff",
          },
          undefined,
        ]
      }
    >
      A Button!
    </Text>
  </View>
</View>
`;

exports[`Button Component; Size / Emphasis / Type / State DEFAULTS: Size [M] / Emphasis [Primary] / Type [default] / State [default] 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#1c58d9",
        },
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flex": 0,
            "justifyContent": "center",
          },
          Object {
            "height": 40,
            "paddingHorizontal": 20,
            "paddingVertical": 12,
          },
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "OpenSans",
            "fontWeight": "600",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 14,
          },
          Object {
            "color": "#ffffff",
          },
          undefined,
        ]
      }
    >
      A Button!
    </Text>
  </View>
</View>
`;
